--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
 
+        //inyeccion de dependencias de dagger2
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,4 +22,21 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    minSdkVersion = 16
+    targetSdkVersion = 23
+    compileSdkVersion = 23
+    buildToolsVersion = '23.0.3'
+
+    supportLibraryVersion = '23.4.0'
+
+    twitterVersion = '1.12.0@aar'
+    butterknifeVersion = '7.0.1'
+    eventbusVersion = '3.0.0'
+    daggerVersion = '2.0.1'
+    glideVersion = '3.6.1'
+    //dagger requiere esto para las anotaciones. esto viene en java7 pero android funciona en java6
+    jsr250Version = '1.0'
 }
